This commit makes some changes to the html contents

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/logo_background.png" />
+    <link rel="icon" href="./src/assets/logo_tp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
-    <title>Jacob Lewandowski</title>
+    <title>Jakub Lewandowski</title>
   </head>
   <body>
     <div id="app"></div>
